initial html and css finished

--- a/index.html
+++ b/index.html
@@ -8,23 +8,65 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="section">
-      <h1>This is section 1</h1>
-      <ul class="hidden">
-        <li>Info</li>
-        <li>More info</li>
-        <li>Even more info</li>
-        <li>The most info</li>
+    <div class="grid">
+    <nav id="navbar">
+      <ul>
+        <li><a href="">Variables</a></li>
+        <li><a href="">Conditionals</a></li>
+        <li><a href="">Loops</a></li>
+        <li><a href="">Functions</a></li>
+        <li><a href="">Objects</a></li>
       </ul>
+    </nav>
+    <main id="main-doc">
+      <section class="main-section" id="variables">
+        <h1>Variables</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam neque amet et nobis. Eos possimus molestiae voluptate commodi! Perferendis magni adipisci iusto recusandae voluptate doloribus. Omnis ab veritatis minima suscipit?</p>
+        <code>code is here</code>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias autem, quia corrupti deserunt rem modi inventore. Cum ipsam odit consequatur consequuntur! Mollitia harum explicabo minima odit voluptatem blanditiis maiores facere.</p>
+      </section>
+      <section class="main-section" id="conditionals">
+        <h1>Conditionals</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam neque amet et nobis. Eos possimus molestiae
+          voluptate commodi! Perferendis magni adipisci iusto recusandae voluptate doloribus. Omnis ab veritatis minima
+          suscipit?</p>
+        <code>code is here</code>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias autem, quia corrupti deserunt rem modi inventore.
+          Cum ipsam odit consequatur consequuntur! Mollitia harum explicabo minima odit voluptatem blanditiis maiores facere.
+        </p>
+      </section>
+      <section class="main-section" id="functions">
+        <h1>Loops</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam neque amet et nobis. Eos possimus molestiae
+          voluptate commodi! Perferendis magni adipisci iusto recusandae voluptate doloribus. Omnis ab veritatis minima
+          suscipit?</p>
+        <code>code is here</code>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias autem, quia corrupti deserunt rem modi inventore.
+          Cum ipsam odit consequatur consequuntur! Mollitia harum explicabo minima odit voluptatem blanditiis maiores facere.
+        </p>
+      </section>
+      <section class="main-section" id="fucntions">
+        <h1>Functions</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam neque amet et nobis. Eos possimus molestiae
+          voluptate commodi! Perferendis magni adipisci iusto recusandae voluptate doloribus. Omnis ab veritatis minima
+          suscipit?</p>
+        <code>code is here</code>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias autem, quia corrupti deserunt rem modi inventore.
+          Cum ipsam odit consequatur consequuntur! Mollitia harum explicabo minima odit voluptatem blanditiis maiores facere.
+        </p>
+      </section>
+      <section class="main-section" id="objects">
+        <h1>Objects</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veniam neque amet et nobis. Eos possimus molestiae
+          voluptate commodi! Perferendis magni adipisci iusto recusandae voluptate doloribus. Omnis ab veritatis minima
+          suscipit?</p>
+        <code>code is here</code>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias autem, quia corrupti deserunt rem modi inventore.
+          Cum ipsam odit consequatur consequuntur! Mollitia harum explicabo minima odit voluptatem blanditiis maiores facere.
+        </p>
+      </section>
+    </main>
     </div>
-    <div class="section">
-      <h1>This is section 2</h1>
-      <ul class="hidden">
-        <li>Info</li>
-        <li>More info</li>
-        <li>Even more info</li>
-        <li>The most info</li>
-      </ul>
     </div>
     <script src="script.js"></script>
   </body>
